now recieves a posted request
